--- a/Manuscript.html
+++ b/Manuscript.html
@@ -6,6 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
+<meta name="author" content="Niklas Hausmann">
 
 <title>Manuscript</title>
 <style>
@@ -52,6 +53,12 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="quarto-title-meta">
 
+    <div>
+    <div class="quarto-title-meta-heading">Author</div>
+    <div class="quarto-title-meta-contents">
+             <p>Niklas Hausmann </p>
+          </div>
+  </div>
     
   
     
@@ -64,9 +71,9 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cell">
 <div class="cell-output cell-output-stdout">
-<pre><code> [1] "ND-1016-3"  "ND-1016-4"  "NM-1016-1"  "NM-1016-3"  "QG1-7188-1"
- [6] "QG1-7189-2" "QG1-7246-1" "QG2-1061-1" "QG2-1064-1" "QG2-7180-1"
-[11] "QG2-7180-2"</code></pre>
+<pre><code> [1] "QG1-7188-1" "QG1-7189-2" "QG2-1061-1" "QG2-1064-1" "QG2-7180-1"
+ [6] "QG2-7180-2" "QG1-7246-1" "ND-1016-3"  "ND-1016-4"  "NM-1016-1" 
+[11] "NM-1016-3" </code></pre>
 </div>
 <div class="cell-output cell-output-stdout">
 <pre><code>character(0)</code></pre>
@@ -81,6 +88,16 @@ ul.task-list li input[type="checkbox"] {
 <figure class="figure">
 <p><img src="Manuscript_files/figure-html/Raw%20Data-1.png" class="img-fluid figure-img" width="768"></p>
 <figcaption>Raw Mg/Ca and δ<sup>18</sup>O Data</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Manuscript_files/figure-html/Correlation%20Graphs-1.png" class="img-fluid figure-img" width="960"></p>
+<figcaption>Correlation graphs for all specimens</figcaption>
 </figure>
 </div>
 </div>
