--- a/Manuscript.html
+++ b/Manuscript.html
@@ -190,7 +190,7 @@ window.Quarto = {
 <p>By relying and adding onto published datasets, we were able to simultaneously avoid costs for new high-resolution δ<sup>18</sup>O-data, to use real-world examples, and to also provide pilot-data for areas of existing research interest. Generally establishing the usefulness and reliability of Mg/Ca as SST proxy in limpets should help to provide a platform for future research and an important stepping stone to better understand elemental ratios in other marine mollusc shells.</p>
 </section>
 <section id="Methods" class="level1">
-<h1>Materials and Peoops</h1>
+<h1>Materials and Methods</h1>
 <section id="limpet-specimens" class="level2">
 <h2 class="anchored" data-anchor-id="limpet-specimens">Limpet specimens</h2>
 <section id="modern-specimens" class="level3">
@@ -408,67 +408,61 @@ Figure&nbsp;1: SST values averaged from years. SST values were sourced from <spa
 </section>
 <section id="archaeological-specimens" class="level3">
 <h3 class="anchored" data-anchor-id="archaeological-specimens">Archaeological specimens</h3>
-<p>In total, we studied 16 archaeological specimens. Of those, seven come from Quoygrew on Westray dating to 900 – 1200 CE. These shells have previously been studied to characterise seasonal temperature change during the Medieval Climate Anomaly and the Little Ice Age <span class="citation" data-cites="Surge2012-ba">(<a href="#ref-Surge2012-ba" role="doc-biblioref">Surge and Barrett 2012</a>)</span>. Together they show a range of lifespans, with some comparatively long for their size (QG1-7246-1, 12 years within 16 mm of growth) making them particularly susceptible to time-averaging. That said, the majority are under 5 years old. These shells are an ideal comparative dataset from an archaeological assemblage to compare to the modern shell ORK_LT5 <span class="citation" data-cites="Graniero2017-io">(<a href="#ref-Graniero2017-io" role="doc-biblioref">L. E. Graniero et al. 2017</a>)</span>.</p>
-<p>Nine additional shells have been selected for LIBS analysis only, to provide a comparative dataset to the modern <em>Nacella</em> sp. shells. These have not been analysed for δ<sup>18</sup>O-values, but rather as a test to see whether patterns visible in the modern Mg/Ca ratio distributions are also preserved and apparent in the archaeological shells.</p>
+<p>In total, we studied 16 archaeological specimens. Of those, seven <em>P. vulgata</em> come from Quoygrew on Westray dating to 900 – 1200 CE. These shells have previously been studied to characterise seasonal temperature change during the Medieval Climate Anomaly and the Little Ice Age <span class="citation" data-cites="Surge2012-ba">(<a href="#ref-Surge2012-ba" role="doc-biblioref">Surge and Barrett 2012</a>)</span>. Together they show a range of lifespans, with some comparatively long for their size (QG1-7246-1, 12 years within 16 mm of growth) making them particularly susceptible to time-averaging. That said, the majority are under 5 years old. These shells are an ideal comparative dataset from an archaeological assemblage to compare to the modern shell ORK_LT5 <span class="citation" data-cites="Graniero2017-io">(<a href="#ref-Graniero2017-io" role="doc-biblioref">L. E. Graniero et al. 2017</a>)</span>.</p>
+<p>Nine additional shells of <em>N. magellanica</em> (n=6) and <em>N</em>. <em>deaureata</em> (n=3) have been selected for LIBS analysis only, to provide a comparative dataset to the modern <em>Nacella</em> sp. shells. These have not been analysed for δ<sup>18</sup>O-values, but rather as a test to see whether patterns visible in the modern Mg/Ca ratio distributions are also preserved and apparent in the archaeological shells. They derive from the site of Heshkaia 35 situated within Moat Bay, around 30 km east of where the modern specimens in our study were collected <span class="citation" data-cites="Zangrando2014-qi Zangrando2021-qg">(<a href="#ref-Zangrando2014-qi" role="doc-biblioref">A. F. Zangrando et al. 2014</a>; <a href="#ref-Zangrando2021-qg" role="doc-biblioref">A. F. J. Zangrando et al. 2021</a>)</span>. With radiocarbon dates putting the shells into the Late Holocene (1300 – 1450 CE) they are of similar age — if somewhat younger — as the assemblage from Quoygrew.</p>
 </section>
 </section>
 <section id="methods" class="level2">
 <h2 class="anchored" data-anchor-id="methods">Methods</h2>
-<section id="oxygen-isotopes" class="level3">
-<h3 class="anchored" data-anchor-id="oxygen-isotopes">Oxygen isotopes</h3>
-<p>High-quality oxygen isotope values (δ<sup>18</sup>O) were acquired from previous publications on <em>P. vulgata</em> <span class="citation" data-cites="Surge2012-ba Graniero2017-io">(<a href="#ref-Surge2012-ba" role="doc-biblioref">Surge and Barrett 2012</a>; <a href="#ref-Graniero2017-io" role="doc-biblioref">L. E. Graniero et al. 2017</a>)</span>, <em>N. deaureata</em> and <em>N. magellanica</em> <span class="citation" data-cites="Nicastro2020-ih">(<a href="#ref-Nicastro2020-ih" role="doc-biblioref">Nicastro et al. 2020</a>)</span>, where detailed descriptions of the stable isotope analysis methodology can be found. In short, all shells were sectioned along the main growth axis to expose the internal growth structure. From the exposed section carbonate powder samples were acquired using a micromilling approach with resolutions of 100–200 µm and targeting the calcitic M+2 layer of the shells. Analytical precision of the isotope values was consistently at 0.05–0.10‰ and values are reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee Belemnite) standard.</p>
-</section>
 <section id="mgca-ratios" class="level3">
 <h3 class="anchored" data-anchor-id="mgca-ratios">Mg/Ca ratios</h3>
-<p>Mg/Ca elemental imaging was carried out using Laser Induced Breakdown Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany) using previously published methods <span class="citation" data-cites="Hausmann2023-ih">(<a href="#ref-Hausmann2023-ih" role="doc-biblioref">Niklas Hausmann et al. 2023</a>)</span>. These involve the ablation of the shell section using an infrared (1064 nm) laser pulse (1–2 mJ, 100 Hz) onto a surface area of 20–30 µm to generate a plasma plume. This plume emits light, which is measured using a synchronised spectrometer. The resulting light spectrum quantifies the emission lines of magnesium () and calcium () to determine their intensity ratio. While these two peaks alone do not represent the molar concentrations of both elements (as opposed to calibration free LIBS; e.g. <span class="citation" data-cites="Martinez-Minchero2022-jz">(<a href="#ref-Martinez-Minchero2022-jz" role="doc-biblioref">Martı́nez-Minchero et al. 2022</a>)</span>), the intensity ratio is linearly correlated to the molar concentration <span class="citation" data-cites="Hausmann2017-oa">(<a href="#ref-Hausmann2017-oa" role="doc-biblioref">N. Hausmann et al. 2017</a>)</span>.</p>
+<p>Mg/Ca elemental imaging was carried out using Laser Induced Breakdown Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany) using previously published methods <span class="citation" data-cites="Hausmann2023-ih">(<a href="#ref-Hausmann2023-ih" role="doc-biblioref">Niklas Hausmann et al. 2023</a>)</span>. These involve the ablation of the shell section using an infrared (1064 nm) laser (1–2 mJ, 100 Hz) onto a surface area of 20–30 µm to generate a plasma plume. This plume emits light, which is measured using a synchronised spectrometer. The resulting light spectrum quantifies the emission lines of magnesium (MgII; 279.553 nm) and calcium (CaII; 315.887 nm) to determine their intensity ratio. While these two peaks alone do not represent the molar concentrations of both elements (as opposed to calibration free LIBS; e.g. <span class="citation" data-cites="Martinez-Minchero2022-jz">(<a href="#ref-Martinez-Minchero2022-jz" role="doc-biblioref">Martı́nez-Minchero et al. 2022</a>)</span>), the intensity ratio is linearly correlated to the molar concentration <span class="citation" data-cites="Hausmann2017-oa">(<a href="#ref-Hausmann2017-oa" role="doc-biblioref">N. Hausmann et al. 2017</a>)</span> and can be used as a reliable indicator of Mg/Ca changes within the shell carbonate.</p>
+</section>
+<section id="oxygen-isotopes" class="level3">
+<h3 class="anchored" data-anchor-id="oxygen-isotopes">Oxygen isotopes</h3>
+<p>High-quality oxygen isotope values (δ<sup>18</sup>O) were acquired from previous publications on <em>P. vulgata</em> <span class="citation" data-cites="Surge2012-ba Graniero2017-io">(<a href="#ref-Surge2012-ba" role="doc-biblioref">Surge and Barrett 2012</a>; <a href="#ref-Graniero2017-io" role="doc-biblioref">L. E. Graniero et al. 2017</a>)</span>, <em>N. deaureata</em> and <em>N. magellanica</em> <span class="citation" data-cites="Nicastro2020-ih">(<a href="#ref-Nicastro2020-ih" role="doc-biblioref">Nicastro et al. 2020</a>)</span>, in which detailed descriptions of the stable isotope analysis methodology can be found. In short, all shells were sectioned along the main growth axis to expose the internal growth structure. From the exposed section carbonate powder samples were acquired using a micromill with resolutions of 100–200 µm and by targeting the calcitic M+2 layer of the shells. Analytical precision of the isotope values was consistently at 0.05–0.10‰ and values are reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee Belemnite) standard.</p>
+<p><a href="#fig-Nac_iso" class="quarto-xref">Figure&nbsp;2</a> and <a href="#fig-Pat_iso" class="quarto-xref">Figure&nbsp;3</a> show the previously acquired sequential δ<sup>18</sup>O-values of limpet shells by species. Due to the high sampling resolution, all shells show seasonally resolved and multi-year quasi-sinusoidal records of SST change , with <em>Nacella</em> sp. shells living 2–3 years and <em>Patella v</em>. regularly over 3 years. In those instances where longer lifetimes are encountered (i.e.&nbsp;specimen QG1-7246-1, <a href="#fig-Pat_iso" class="quarto-xref">Figure&nbsp;3</a> b). Interestingly, the ranges in δ<sup>18</sup>O-values are not similar between the coeval <em>Nacella</em> sp. specimens with δ<sup>18</sup>O values for the previous summer temperatures ranging from 0.4‰ to above 1.0‰, and for winter values between 3.0‰ and 2.0‰. <em>P. vulgata</em> has similarly variable δ<sup>18</sup>O-values for summer and winter seasons, alas the lack of more that one modern specimens, means that we cannot quantify the variability of recorded annual ranges between specimens.</p>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-Nac_iso" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Nac_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Nac_iso-1.png" class="img-fluid figure-img" width="960">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Nac_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;2: Isotope values of Nacella sp. limpet shells from Cambaceres Bay (<em>a-f</em>).
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="cell">
+<div class="cell-output-display">
+<div id="fig-Pat_iso" class="quarto-figure quarto-figure-center quarto-float anchored">
+<figure class="quarto-float quarto-float-fig figure">
+<div aria-describedby="fig-Pat_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+<img src="Manuscript_files/figure-html/fig-Pat_iso-1.png" class="img-fluid figure-img" width="960">
+</div>
+<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Pat_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
+Figure&nbsp;3: Isotope values of Patella vulagata limpet shells from Quoygrew (QG, <em>a-g</em>) and Rack Wick Bay (ORK, <em>h</em>) on Westray, Orkney.
+</figcaption>
+</figure>
+</div>
+</div>
+</div>
 </section>
 </section>
 </section>
 <section id="Results" class="level1">
 <h1>Results</h1>
-<section id="modern-specimens-1" class="level3">
-<h3 class="anchored" data-anchor-id="modern-specimens-1">Modern Specimens</h3>
-<p>All modern shells show multi-year quasi-sinusoidal records of SST change (<a href="#fig-Mod_iso" class="quarto-xref">Figure&nbsp;2</a>), with <em>Nacella</em> sp. shells living 2–3 years and <em>Patella v</em>. over 5 years. The δ<sup>18</sup>O values of the Orcadian shell have not been directly compared to the local SST, but accurately reflect the seasonal changes expected barring one extreme, anomalous value in the second summer of recorded growth.</p>
-<div class="cell">
-<div class="cell-output-display">
-<div id="fig-Mod_iso" class="quarto-figure quarto-figure-center quarto-float anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-Mod_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="Manuscript_files/figure-html/fig-Mod_iso-1.png" class="img-fluid figure-img" width="960">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Mod_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;2: Isotope values of modern limpet shells from Cambaceres Bay (<em>a-f</em>) and Westray (<em>g</em>).
-</figcaption>
-</figure>
-</div>
-</div>
-</div>
-</section>
-<section id="archaeological-specimens-1" class="level3">
-<h3 class="anchored" data-anchor-id="archaeological-specimens-1">Archaeological Specimens</h3>
-<div class="cell">
-<div class="cell-output-display">
-<div id="fig-Arch_iso" class="quarto-figure quarto-figure-center quarto-float anchored">
-<figure class="quarto-float quarto-float-fig figure">
-<div aria-describedby="fig-Arch_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<img src="Manuscript_files/figure-html/fig-Arch_iso-1.png" class="img-fluid figure-img" width="960">
-</div>
-<figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Arch_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;3: Isotope values of Archaeological limpet shells from Quoygrew
-</figcaption>
-</figure>
-</div>
-</div>
-</div>
-</section>
 <section id="patella-vulgata" class="level2">
-<h2 class="anchored" data-anchor-id="patella-vulgata">Patella vulgata</h2>
+<h2 class="anchored" data-anchor-id="patella-vulgata"><em>Patella vulgata</em></h2>
 </section>
 <section id="nacella-deaureata" class="level2">
-<h2 class="anchored" data-anchor-id="nacella-deaureata">Nacella deaureata</h2>
+<h2 class="anchored" data-anchor-id="nacella-deaureata"><em>Nacella deaureata</em></h2>
 </section>
 <section id="nacella-magellanica" class="level2">
-<h2 class="anchored" data-anchor-id="nacella-magellanica">Nacella magellanica</h2>
+<h2 class="anchored" data-anchor-id="nacella-magellanica"><em>Nacella magellanica</em></h2>
 </section>
 </section>
 <section id="section" class="level1">
@@ -758,8 +752,11 @@ Figure&nbsp;3: Isotope values of Archaeological limpet shells from Quoygrew
 </div>
 </div>
 <!--# Maybe get the actual data from the image itself. -->
-
 </section>
+</section>
+<section id="references" class="level1 unnumbered">
+
+
 </section>
 
 
@@ -847,6 +844,12 @@ Wanamaker, Alan D, Jr, Karl J Kreutz, Tiffany Wilson, Harold W Borns Jr, Douglas
 </div>
 <div id="ref-Wang2012-ee" class="csl-entry" role="listitem">
 Wang, Ting, Donna Surge, and Steven Mithen. 2012. <span>“Seasonal Temperature Variability of the Neoglacial (3300–2500 <span>BP</span>) and Roman Warm Period (2500–1600 <span>BP</span>) Reconstructed from Oxygen Isotope Ratios of Limpet Shells (Patella Vulgata), Northwest Scotland.”</span> <em>Palaeogeogr. Palaeoclimatol. Palaeoecol.</em> 317: 104–13.
+</div>
+<div id="ref-Zangrando2021-qg" class="csl-entry" role="listitem">
+Zangrando, Atilio Francisco J, Angélica M Tivoli, Daniela V Alunni, Suray A Pérez, Marı́a Paz Martinoli, and German Pinto Vargas. 2021. <span>“Exploring Shell Midden Formation Through Tapho-Chronometric Tools: A Case Study from Beagle Channel, Argentina.”</span> <em>Quat. Int.</em> 584 (May): 33–43. <a href="https://doi.org/10.1016/j.quaint.2020.04.050">https://doi.org/10.1016/j.quaint.2020.04.050</a>.
+</div>
+<div id="ref-Zangrando2014-qi" class="csl-entry" role="listitem">
+Zangrando, Atilio Francisco, Karen B Borrazzo, Angélica M Tivoli, Daniela V Alunni, and Marı́a Paz Martinoli. 2014. <span>“El Sitio Heshkaia 35: Nuevos Datos Sobre La Arqueolog<span>ı́</span>a de Moat (Tierra Del Fuego, Argentina).”</span> <em>Rev. Mus. Antropol.</em>, September, 11–24. <a href="https://doi.org/10.31048/1852.4826.v7.n1.9090">https://doi.org/10.31048/1852.4826.v7.n1.9090</a>.
 </div>
 </div></section><section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes"><h2 class="anchored quarto-appendix-heading">Footnotes</h2>
 
