added separate graphs

--- a/Manuscript.html
+++ b/Manuscript.html
@@ -417,11 +417,12 @@ Figure&nbsp;1: SST values averaged from years. SST values were sourced from <spa
 <section id="mgca-ratios" class="level3">
 <h3 class="anchored" data-anchor-id="mgca-ratios">Mg/Ca ratios</h3>
 <p>Mg/Ca elemental imaging was carried out using Laser Induced Breakdown Spectroscopy at the Leibniz Zentrum für Archäologie (Mainz-Germany) using previously published methods <span class="citation" data-cites="Hausmann2023-ih">(<a href="#ref-Hausmann2023-ih" role="doc-biblioref">Niklas Hausmann et al. 2023</a>)</span>. These involve the ablation of the shell section using an infrared (1064 nm) laser (1–2 mJ, 100 Hz) onto a surface area of 20–30 µm to generate a plasma plume. This plume emits light, which is measured using a synchronised spectrometer. The resulting light spectrum quantifies the emission lines of magnesium (MgII; 279.553 nm) and calcium (CaII; 315.887 nm) to determine their intensity ratio. While these two peaks alone do not represent the molar concentrations of both elements (as opposed to calibration free LIBS; e.g. <span class="citation" data-cites="Martinez-Minchero2022-jz">(<a href="#ref-Martinez-Minchero2022-jz" role="doc-biblioref">Martı́nez-Minchero et al. 2022</a>)</span>), the intensity ratio is linearly correlated to the molar concentration <span class="citation" data-cites="Hausmann2017-oa">(<a href="#ref-Hausmann2017-oa" role="doc-biblioref">N. Hausmann et al. 2017</a>)</span> and can be used as a reliable indicator of Mg/Ca changes within the shell carbonate.</p>
+<p>Using this system we carried out elemental imaging of the shell specimens at a resolution of 50 µm distance between sampling spots. Each spot was irradiated 10 times with the 3 first spectra used for cleaning steps and the remaining summed to get an average Mg/Ca intensity ratio for each sample spot. Subsequently, we re-sampled the section using a line scan at 10 µm resolution. This leads to an overlap between sample spots, but also allows for a continuous record without gaps. Intensity ratios were filtered for cases with high relative standard deviation (i.e.&nbsp;more than 10%). These occurred in places where the previous sampling procedures for carbonate powder as part of the oxygen isotope analysis left an uneven sample surfaces introducing variability in the plasma generation and thus uncertainty in the data of these locations.</p>
 </section>
 <section id="oxygen-isotopes" class="level3">
 <h3 class="anchored" data-anchor-id="oxygen-isotopes">Oxygen isotopes</h3>
 <p>High-quality oxygen isotope values (δ<sup>18</sup>O) were acquired from previous publications on <em>P. vulgata</em> <span class="citation" data-cites="Surge2012-ba Graniero2017-io">(<a href="#ref-Surge2012-ba" role="doc-biblioref">Surge and Barrett 2012</a>; <a href="#ref-Graniero2017-io" role="doc-biblioref">L. E. Graniero et al. 2017</a>)</span>, <em>N. deaureata</em> and <em>N. magellanica</em> <span class="citation" data-cites="Nicastro2020-ih">(<a href="#ref-Nicastro2020-ih" role="doc-biblioref">Nicastro et al. 2020</a>)</span>, in which detailed descriptions of the stable isotope analysis methodology can be found. In short, all shells were sectioned along the main growth axis to expose the internal growth structure. From the exposed section carbonate powder samples were acquired using a micromill with resolutions of 100–200 µm and by targeting the calcitic M+2 layer of the shells. Analytical precision of the isotope values was consistently at 0.05–0.10‰ and values are reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee Belemnite) standard.</p>
-<p><a href="#fig-Nac_iso" class="quarto-xref">Figure&nbsp;2</a> and <a href="#fig-Pat_iso" class="quarto-xref">Figure&nbsp;3</a> show the previously acquired sequential δ<sup>18</sup>O-values of limpet shells by species. Due to the high sampling resolution, all shells show seasonally resolved and multi-year quasi-sinusoidal records of SST change , with <em>Nacella</em> sp. shells living 2–3 years and <em>Patella v</em>. regularly over 3 years. In those instances where longer lifetimes are encountered (i.e.&nbsp;specimen QG1-7246-1, <a href="#fig-Pat_iso" class="quarto-xref">Figure&nbsp;3</a> b). Interestingly, the ranges in δ<sup>18</sup>O-values are not similar between the coeval <em>Nacella</em> sp. specimens with δ<sup>18</sup>O values for the previous summer temperatures ranging from 0.4‰ to above 1.0‰, and for winter values between 3.0‰ and 2.0‰. <em>P. vulgata</em> has similarly variable δ<sup>18</sup>O-values for summer and winter seasons, alas the lack of more that one modern specimens, means that we cannot quantify the variability of recorded annual ranges between specimens.</p>
+<p><a href="#fig-Nac_iso" class="quarto-xref">Figure&nbsp;2</a> and <a href="#fig-Pat_iso" class="quarto-xref">Figure&nbsp;3</a> show the previously acquired sequential δ<sup>18</sup>O-values of limpet shells by species. Due to the high sampling resolution, all shells show seasonally resolved and multi-year quasi-sinusoidal records of SST change , with <em>Nacella</em> sp. shells living 2–3 years and <em>Patella v</em>. regularly over 3 years. In those instances where longer lifetimes are encountered (i.e.&nbsp;specimen QG1-7246-1, <a href="#fig-Pat_iso" class="quarto-xref">Figure&nbsp;3</a> b). Interestingly, the annual ranges in δ<sup>18</sup>O-values are not similar between the coeval <em>Nacella</em> sp. specimens with δ<sup>18</sup>O values for the previous summer temperatures ranging from 0.4‰ to above 1.0‰, and for winter values between 2.7‰ and 2.0‰. <em>P. vulgata</em> has similarly variable δ<sup>18</sup>O-values for summer and winter seasons, alas the lack of more that one modern specimens, means that we cannot quantify the variability of recorded annual ranges between specimens.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-Nac_iso" class="quarto-figure quarto-figure-center quarto-float anchored">
@@ -430,7 +431,7 @@ Figure&nbsp;1: SST values averaged from years. SST values were sourced from <spa
 <img src="Manuscript_files/figure-html/fig-Nac_iso-1.png" class="img-fluid figure-img" width="960">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Nac_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;2: Isotope values of Nacella sp. limpet shells from Cambaceres Bay (<em>a-f</em>).
+Figure&nbsp;2: Isotope values of <em>Nacella</em> sp. limpet shells from Cambaceres Bay (<em>a-f</em>).
 </figcaption>
 </figure>
 </div>
@@ -444,7 +445,7 @@ Figure&nbsp;2: Isotope values of Nacella sp. limpet shells from Cambaceres Bay (
 <img src="Manuscript_files/figure-html/fig-Pat_iso-1.png" class="img-fluid figure-img" width="960">
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-Pat_iso-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-Figure&nbsp;3: Isotope values of Patella vulagata limpet shells from Quoygrew (QG, <em>a-g</em>) and Rack Wick Bay (ORK, <em>h</em>) on Westray, Orkney.
+Figure&nbsp;3: Isotope values of <em>Patella vulgata</em> limpet shells from Quoygrew (QG, <em>a-g</em>) and Rack Wick Bay (ORK, <em>h</em>) on Westray, Orkney.
 </figcaption>
 </figure>
 </div>
@@ -452,31 +453,44 @@ Figure&nbsp;3: Isotope values of Patella vulagata limpet shells from Quoygrew (Q
 </div>
 </section>
 </section>
+<section id="dynamic-time-warping" class="level2">
+<h2 class="anchored" data-anchor-id="dynamic-time-warping">Dynamic Time Warping</h2>
+<p>Because the exact location used in the analysis of stable oxygen isotopes is not possible to reconstruct for each carbonate powder sample, we used dynamic time warping (DTW) to align the time series of δ<sup>18</sup>O-values and Mg/Ca ratios. DTW is an algorithm that measures similarity between two proxy-sequences, which may vary in sampling resolution or interval. By stretching or compressing sections of the series, DTW finds the probable alignment between the two sequences. This allows us to compare the proxy data sets more effectively, ensuring that the temporal dynamics of each shell are accurately matched despite possible discrepancies in sampling intervals or rates. We applied the DTW algorithm using the <code>dtw</code> package in R <span class="citation" data-cites="Giorgino2009-sj R_Core_Team2020-mk">(<a href="#ref-Giorgino2009-sj" role="doc-biblioref">Giorgino 2009</a>; <a href="#ref-R_Core_Team2020-mk" role="doc-biblioref">R Core Team 2020</a>)</span>, which provides a robust framework for aligning time series data. This involved selecting appropriate distance measures and constraints to ensure meaningful alignment. The process involved iterative adjustments to minimise the overall distance between corresponding points in the two data sets. The code used for this analysis as well as the data required to run it can be found in this <strong>OSF repository</strong>.</p>
+</section>
 </section>
 <section id="Results" class="level1">
 <h1>Results</h1>
 <section id="patella-vulgata" class="level2">
 <h2 class="anchored" data-anchor-id="patella-vulgata"><em>Patella vulgata</em></h2>
-</section>
-<section id="nacella-deaureata" class="level2">
-<h2 class="anchored" data-anchor-id="nacella-deaureata"><em>Nacella deaureata</em></h2>
-</section>
-<section id="nacella-magellanica" class="level2">
-<h2 class="anchored" data-anchor-id="nacella-magellanica"><em>Nacella magellanica</em></h2>
-</section>
-</section>
-<section id="section" class="level1">
-<h1></h1>
+<ul>
+<li>Show one or a few of the LIBS maps as well as the line scans.</li>
+<li>Show one the line scans together with isotope data.</li>
+<li>Show correlation graphs.</li>
+</ul>
 <div class="cell">
 <div class="cell-output-display">
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure">
-<p><img src="Manuscript_files/figure-html/Correlation%20Graphs-1.png" class="img-fluid figure-img" width="960"></p>
-<figcaption>Correlation graphs for all specimens</figcaption>
+<p><img src="Manuscript_files/figure-html/Patella_Correlation_Graphs-1.png" class="img-fluid figure-img" width="1440"></p>
+<figcaption>Correlation graphs for <em>Patella vulgata</em> specimens</figcaption>
 </figure>
 </div>
 </div>
 </div>
+</section>
+<section id="nacella-sp." class="level2">
+<h2 class="anchored" data-anchor-id="nacella-sp."><em>Nacella</em> sp.</h2>
+<div class="cell">
+<div class="cell-output-display">
+<div class="quarto-figure quarto-figure-center">
+<figure class="figure">
+<p><img src="Manuscript_files/figure-html/Nacella_Correlation_Graphs-1.png" class="img-fluid figure-img" width="1440"></p>
+<figcaption>Correlation graphs for <em>Nacella</em> sp. specimens</figcaption>
+</figure>
+</div>
+</div>
+</div>
+</section>
 </section>
 <section id="discussion" class="level1">
 <h1>Discussion</h1>
@@ -788,6 +802,9 @@ Garcı́a-Escárzaga, Asier, Leon J Clarke, Igor Gutiérrez-Zugasti, Manuel R Go
 <div id="ref-Garcia-Escarzaga2021-ij" class="csl-entry" role="listitem">
 Garcı́a-Escárzaga, Asier, Marina Martı́nez-Minchero, Adolfo Cobo, Igor Gutiérrez-Zugasti, Alvaro Arrizabalaga, and Patrick Roberts. 2021. <span>“Using <span>Mg/Ca</span> Ratios from the Limpet Patella Depressa Pennant, 1777 Measured by <span>Laser-Induced</span> Breakdown Spectroscopy (<span>LIBS</span>) to Reconstruct Paleoclimate.”</span> <em>NATO Adv. Sci. Inst. Ser. E Appl. Sci.</em> 11 (7): 2959. <a href="https://doi.org/10.3390/app11072959">https://doi.org/10.3390/app11072959</a>.
 </div>
+<div id="ref-Giorgino2009-sj" class="csl-entry" role="listitem">
+Giorgino, Toni. 2009. <span>“Computing and Visualizing Dynamic Time Warping Alignments in r: The Dtw Package.”</span> <em>Journal of Statistical Software, Articles</em> 31 (7): 1–24. <a href="https://doi.org/10.18637/jss.v031.i07">https://doi.org/10.18637/jss.v031.i07</a>.
+</div>
 <div id="ref-Good2020-nl" class="csl-entry" role="listitem">
 Good, Simon, Emma Fiedler, Chongyuan Mao, Matthew J Martin, Adam Maycock, Rebecca Reid, Jonah Roberts-Jones, et al. 2020. <span>“The Current Configuration of the <span>OSTIA</span> System for Operational Production of Foundation Sea Surface Temperature and Ice Concentration Analyses.”</span> <em>Remote Sensing</em> 12 (4): 720. <a href="https://doi.org/10.3390/rs12040720">https://doi.org/10.3390/rs12040720</a>.
 </div>
@@ -823,6 +840,9 @@ Parker, Wesley, Yurena Yanes, Eduardo Mesa Hernández, Juan Carlos Hernández Ma
 </div>
 <div id="ref-Poulain2015-dg" class="csl-entry" role="listitem">
 Poulain, C, D P Gillikin, Julien Thébault, Jean-Marie Munaron, Marcel Bohn, Rene Robert, Y-M Paulet, and Anne Lorrain. 2015. <span>“An Evaluation of <span>Mg/Ca</span>, <span>Sr/Ca</span>, and <span>Ba/Ca</span> Ratios as Environmental Proxies in Aragonite Bivalve Shells.”</span> <em>Chem. Geol.</em> 396: 42–50.
+</div>
+<div id="ref-R_Core_Team2020-mk" class="csl-entry" role="listitem">
+R Core Team. 2020. <span>“<span>R</span> Core Team r: A Language and Environment for Statistical Computing.”</span> <em>Foundation for Statistical Computing</em>.
 </div>
 <div id="ref-Schone2010-yl" class="csl-entry" role="listitem">
 Schöne, Bernd R, Zengjie Zhang, Dorrit Jacob, David P Gillikin, Thomas Tütken, Dieter Garbe-Schönberg, and Analı́a Soldati. 2010. <span>“Effect of Organic Matrices on the Determination of the Trace Element Chemistry (Mg, Sr, <span>Mg/Ca</span>, <span>Sr/Ca</span>) of Aragonitic Bivalve Shells (Arctica Islandica)—Comparison of <span>ICP-OES</span> and <span>LA-ICP-MS</span> Data.”</span> <em>Geochem. J.</em> 44 (1): 23–37.
